<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:textColor="@android:color/black"
            android:text="@string/a_title"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp"
            android:text="@string/a_sous_title"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                android:text="@string/h_step1"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/preview_h_step1"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                android:text="@string/h_step2"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/preview_h_step2"
                tools:ignore="ContentDescription" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                android:text="@string/h_step3"
                />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/preview_h_step3"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                android:text="@string/h_step4"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/preview_h_step4"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                android:text="@string/h_step5"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/preview_h_step5"
                tools:ignore="ContentDescription" />






        </LinearLayout>


    </LinearLayout>






</LinearLayout>