<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/choose_item_bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.8">


            <TextView
                android:id="@+id/privacy_policy2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
               android:gravity="center"
                android:layout_above="@+id/img"
                android:scaleType="centerInside"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/title_home"
                android:textSize="@dimen/_16sdp" />


            <ImageView
                android:id="@+id/img"
                android:layout_width="@dimen/_170sdp"
                android:layout_height="@dimen/_170sdp"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/guide1"
                tools:ignore="ContentDescription" />


        </RelativeLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/start_tips"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/background_btn"
                    android:gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:scaleType="centerInside"
                    android:text="@string/start_text"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />



                <TextView
                    android:id="@+id/rate"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_8sdp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/background_btn"
                    android:gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:scaleType="centerInside"
                    android:text="@string/rate_text"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:id="@+id/share"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_8sdp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/background_btn"
                    android:gravity="center"
                    android:scaleType="centerInside"
                    android:text="@string/share_text"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_18sdp" />


                <TextView
                    android:id="@+id/privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:scaleType="centerInside"
                    android:gravity="center"
                    android:text="@string/privacy_text"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_16sdp" />


            </LinearLayout>




        </LinearLayout>


    </LinearLayout>





</RelativeLayout>